AKS-files/AKS-imgur-service-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: imgur-service
  name: imgur-service
  namespace: leagueshare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imgur-service
  strategy: {}
  template:
    metadata:
      labels:
        app: imgur-service
    spec:
      containers:
        - image: ghcr.io/tsan21/leagueshare-imgur-service:main
          imagePullPolicy: Always
          name: imgur-service
          ports:
            - containerPort: 8091
          resources: {}
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: imgur-service
  name: imgur-service
  namespace: leagueshare
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
  selector:
    app: imgur-service
