AKS-files/AKS-rmq-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
         app: rabbitmq
    spec:
      containers:
      - image: rabbitmq:3.8-management
        name: rabbitmq
        ports:
        - containerPort: 15671
        - containerPort: 5671
        # volumeMounts:
        # - mountPath: /etc/rabbitmq
        #   name: rabbit-mq-data
      restartPolicy: Always
      # hostname: rabbitmq
      # volumes:
      # - name: rabbit-mq-data
      #   persistentVolumeClaim:
      #     claimName: rabbit-mq-data
---

kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
  namespace: leagueshare
spec:
  type: LoadBalancer  # We need a headless service to allow the pods to discover each
  ports:           # other during autodiscover phase for cluster creation.
   - name: http    # A ClusterIP will prevent resolving dns requests for other pods
     protocol: TCP # under the same service.
     port: 15672
     targetPort: 15672
   - name: amqp
     protocol: TCP
     port: 5672
     targetPort: 5672
  selector:
    app: rabbitmq
